# officerepo

./: .env.example  .gitignore  .replit  alembic.ini  docker-compose.yml  ecosystem.config.cjs  main.py  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix
.agents/: agent_assets_metadata.toml
alembic/: env.py
app/: database.py  schemas.py
attached_assets/: Pasted--DEFAULT-ENABLEMENT-RULES--1781950530946_1781950530946.txt  Pasted--Naviora-by-Blue-Stratum-Public-Landing-Page-Authentica_1782106319934.txt  Pasted--RECRUITMENT-TIMELINE--1784100898804_1784100898806.txt  Pasted--WORK-FROM-HOME-SUPPORT-Work-From-Home-WFH-must-be-impl_1781959457201.txt  Pasted-Build-Settings-Currency-Management-Module-for-Office-Re_1780142179328.txt  Pasted-Build-a-complete-Lead-Management-Sales-Pipeline-module-_1780120674605.txt  Pasted-Build-a-futuristic-SaaS-style-landing-to-login-transiti_1778231233323.txt  Pasted-Build-a-production-ready-SaaS-foundation-named-Office-R_1777558096861.txt  Pasted-Build-the-Client-Management-module-for-the-Office-Repo-_1780141907312.txt  Pasted-Build-the-Tenant-Management-Module-for-the-Office-Repo-_1778155298796.txt  Pasted-Create-a-temporary-Superadmin-API-in-Office-Repo-to-ver_1780389729750.txt  Pasted-Dockerize-the-OfficeRepo-application-for-production-wit_1782454699895.txt  Pasted-Enhance-Superadmin-Asset-Management-Asset-Masters-Asset_1781871780795.txt  Pasted-Enhance-the-Branch-Master-to-support-branch-level-GST-r_1784178339607.txt  Pasted-Enhance-the-Client-Settings-module-to-become-the-centra_1784526826447.txt  Pasted-Enhance-the-Office-Repo-Website-Enquiry-Form-with-Priva_1780118742621.txt  Pasted-Enhance-the-existing-Company-Management-form-in-Office-_1781071857152.txt  Pasted-Enhance-the-existing-Department-Management-module-in-Of_1781078567545.txt  Pasted-Let-s-design-and-implement-Client-Module-Asset-Manageme_1781874708632.txt  Pasted-Let-s-design-and-implement-Client-Module-Asset-Manageme_1782104406104.txt  Pasted-Let-s-design-and-implement-Client-Module-Asset-Manageme_1782107360255.txt  Pasted-Let-s-design-and-implement-Client-Module-Asset-Manageme_1782111450909.txt  Pasted-Let-s-design-and-implement-Client-Module-Asset-Manageme_1782111631696.txt  Pasted-Let-s-design-and-implement-Client-Module-Employee-Docum_1781940136064.txt  Pasted-Let-s-design-and-implement-Client-Module-Employee-Manag_1781072147237.txt  Pasted-Let-s-design-and-implement-Client-Module-HRMS-Attendanc_1781957471485.txt  Pasted-Let-s-design-and-implement-Client-Module-HRMS-Employee-_1781957413651.txt  (+27 more)
backend/: main.py  (+2 more)
(+778 files in other folders)
