[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.27",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# Pin package discovery to the real Python packages. Without this, setuptools'
# flat-layout auto-discovery sees the data dirs (uploads/, attached_assets/,
# private_storage/) as top-level packages and aborts the editable install
# ("Multiple top-level packages discovered in a flat-layout"), which fails the
# deployment build.
[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["uploads*", "attached_assets*", "private_storage*", "frontend*", "scripts*", "tests*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
